Implemented: -Fix migration bug on mysql

--- a/ClinicAppointment/appsettings.json
+++ b/ClinicAppointment/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "MySqlDb": "Server=localhost;Database=clinicdb;User=root;Password=Oracl32024@;",
-    "MSSqlDb": "Server=LAPTOP-PEGTQ62A\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;"
+    //"MSSqlDb": "Server=LAPTOP-PEGTQ62A\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;"
     //"DefaultConnection": "Server=DESKTOP-CLINIC\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;"
   },
   "Logging": {
