--- a/ClinicAppointment/appsettings.json
+++ b/ClinicAppointment/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-PEGTQ62A\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;" 
+    "DefaultConnection": "Server=DESKTOP-HOUSE\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;",
+    //"DefaultConnection": "Server=LAPTOP-PEGTQ62A\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;"
     //"DefaultConnection": "Server=DESKTOP-CLINIC\\SQLEXPRESS;Database=ClinicDB ;User Id=sa;Password=12345;MultipleActiveResultSets=true;Encrypt=False;"
   },
   "Logging": {
